--- a/.github/workflows/golang-test.yml
+++ b/.github/workflows/golang-test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
+          persist-credentials: true
           fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
       
       - name: Setup go
@@ -49,5 +49,5 @@ jobs:
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ github.token }}
+          github_token: ${{ env.BADGE_TOKEN }}
           branch: ${{ github.head_ref }}
