--- a/.github/workflows/golang-test.yml
+++ b/.github/workflows/golang-test.yml
@@ -9,6 +9,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     name: Update coverage badge
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
